--- a/frontend/src/app/components/homepage/homepage.component.html
+++ b/frontend/src/app/components/homepage/homepage.component.html
@@ -1,3 +1,4 @@
+<app-search></app-search>
 <ul>
   <li *ngFor="let item of foods" class="card">
 
@@ -36,7 +37,7 @@
         </span>
       </div>
 
-      
+
     </div>
 
   </li>
