--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -19,7 +19,7 @@
 
         </li>
         <li>
-          <a routerLink="/cart-page">Cart <span>3</span></a>
+          <a routerLink="/cart-page">Cart <span *ngIf='cartquantity'>{{cartquantity}}</span></a>
 
         </li>
       </ul>
