--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,7 +2,7 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Nunito:wght@700&family=PT+Sans:wght@700&family=Roboto:wght@500&family=Roboto+Slab&display=swap");
 * {
-  font-family: "Roboto", sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-weight: 500;
   box-shadow: border-box;
 }
@@ -19,6 +19,3 @@ body {
   margin: 0;
 }
 
-a {
-  text-decoration: none;
-}
