--- a/frontend/src/app/components/foodpage/foodpage.component.html
+++ b/frontend/src/app/components/foodpage/foodpage.component.html
@@ -1,4 +1,7 @@
-<div class="container main">
+<app-not-found [visible]="!food.id" notFoundMessage="Food Not Found !">
+</app-not-found>
+
+<div class="container main" *ngIf="food.id">
   <img class="food-thumbnail" [src]="this.food.imageUrl" [alt]="this.food.name">
   <div class="container content">
 
@@ -32,7 +35,7 @@
 
     <div class="price">
       Price:
-      <span>{{this.food.price | currency: 'INR'}}</span>
+      <span>{{this.food.price | currency: ''}}</span>
     </div>
 
     <button class="cart btn-danger rounded" (click)="addToCart()">Add to Cart</button>
