--- a/frontend/src/app/components/homepage/homepage.component.html
+++ b/frontend/src/app/components/homepage/homepage.component.html
@@ -32,7 +32,7 @@
 
       <div class="price">
         <span>
-          {{item.price | currency: 'INR'}}
+          {{item.price | currency: ''}}
         </span>
       </div>
 
