--- a/frontend/src/app/components/foodpage/foodpage.component.css
+++ b/frontend/src/app/components/foodpage/foodpage.component.css
@@ -21,6 +21,7 @@
   display: flex;
   flex-direction: column;
   flex: 6;
+  /* margin-left: 5px; */
 }
 
 .name{
@@ -65,6 +66,7 @@
   padding: 0.2rem 0.5rem;
   border-radius: 2rem;
   margin-right: 0.3rem;
+  margin-bottom: 0.3rem;
 }
 
 .tagger{
@@ -79,6 +81,7 @@
   padding: 0.2rem 0.5rem;
   border-radius: 2rem;
   margin-right: 0.3rem;
+  margin-bottom: 0.3rem;
 }
 
 .cook-time{
