added backend and intergration

--- a/frontend/src/app/components/foodpage/foodpage.component.css
+++ b/frontend/src/app/components/foodpage/foodpage.component.css
@@ -100,3 +100,12 @@
   margin-top: 1rem;
   border-radius: 50%;
 }
+
+@media only screen and (max-width: 600px){
+
+  .main{
+    flex-direction: column;
+    width: 25rem;
+    height: 20rem;
+  }
+}
