--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -5,16 +5,16 @@
     <nav>
       <ul>
         <li>
-          <a routerLink="/login">login</a>
+          <a routerLink="/login" *ngIf="!isLogged">login</a>
 
         </li>
-        <li class="menu-container">
-          <a routerLink="/dashboard">User</a>
+        <li class="menu-container" *ngIf="isLogged">
+          <a routerLink="/dashboard">{{user.name}}</a>
 
           <div class="menu">
           <a routerLink="/profile">profile</a>
           <a routerLink="/orders">orders</a>
-          <a routerLink="/logout">logout</a>
+          <a (click)="logout()">logout</a>
           </div>
 
         </li>
