--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,21 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Nunito:wght@700&family=PT+Sans:wght@700&family=Roboto:wght@500&family=Roboto+Slab&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Nunito:wght@700&family=PT+Sans:wght@700&family=Roboto:wght@400&family=Roboto+Slab&display=swap");
 * {
   font-family: "PT Sans", sans-serif;
-  font-weight: 500;
+  font-weight: 400;
   box-shadow: border-box;
 }
 html {
   font-size: 16px;
 }
+html,
+body {
+  min-width: 100%;
+}
+
+
 
 html,
 button {
-  font-family: "PT Sans", serif;
+  font-family: "Nunito", serif;
 }
-
 body {
-  margin: 0;
+  padding: 0px;
+  margin: 0px;
 }
-
