--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -22,7 +22,7 @@
         </select>
       </div>
       <div>
-        {{cartItem.price | currency}}
+        {{cartItem.price | currency: 'Rs. '}}
       </div>
 
       <div>
@@ -35,7 +35,7 @@
   <div class="checkout">
     <div>
       <div class="foods-count">{{cart.totalCount}}</div>
-      <div class="total-price">{{cart.totalPrice|currency}}</div>
+      <div class="total-price">{{cart.totalPrice|currency: 'Rs. '}}</div>
     </div>
 
     <a routerLink="/checkout">Proceed to Checkout</a>
