--- a/frontend/src/app/components/pages/homepage/homepage.component.html
+++ b/frontend/src/app/components/pages/homepage/homepage.component.html
@@ -32,7 +32,7 @@
 
       <div class="price">
         <span>
-          {{item.price | currency: ''}}
+          {{item.price | currency: 'Rs.'}}
         </span>
       </div>
 
