--- a/frontend/src/app/components/partials/order-items-list/order-items-list.component.css
+++ b/frontend/src/app/components/partials/order-items-list/order-items-list.component.css
@@ -27,3 +27,9 @@ td img {
   border-radius: 100rem;
   margin-left: 0.8rem;
 }
+
+@media screen and (max-width: 600px) {
+ td img{
+  display: none;
+ }
+}
