cart-page responsive

--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -38,6 +38,6 @@
       <div class="total-price">{{cart.totalPrice|currency: 'Rs. '}}</div>
     </div>
 
-    <a routerLink="/checkout">Proceed to Checkout</a>
+    <button class="btn btn-primary" routerLink="/checkout">Proceed to Checkout</button>
   </div>
 </div>
